3-tier-application/applicationend/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
      - name: java
        image: iammaheshn/applicationend:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: java-svc
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: java-app
  ports:
  - port: 8080
