3-tier-application/applicationend/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-ingress
  namespace: jenkins
spec:
  ingressClassName: nginx
  rules:
  - host: ingress.kubernetes
    http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: java-svc
            port:
              number: 8080
